deploys/mongodb/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  annotations:
  name: mongodb
  namespace: mongodb
spec:
  gateways:
    - default/default-gateway
  hosts:
    - "mongodb.localhost"
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: local-mongodb.mongodb.svc.cluster.local
            port:
              number: 80
